fix inserindo genero, cpf e data de nascimeto
